force-app/main/default/objects/Order/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bill To)</relationshipLabel>
    <relationshipName>Orders_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>