force-app/main/default/objects/Order/fields/BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmount__c</fullName>
    <inlineHelpText>Amount charged to the budget: product total without shipping costs at order-simulation prices. Frozen when the ERP order is created.</inlineHelpText>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>