force-app/main/default/objects/Order/fields/BudgetConsumedAt__c.field-meta.xml
<CustomField>
    <fullName>BudgetConsumedAt__c</fullName>
    <inlineHelpText>Set once when the ERP order number arrives. Its year is the budget year for return credits.</inlineHelpText>
    <label>Budget Consumed At</label>
    <type>DateTime</type>
</CustomField>