force-app/main/default/objects/Order/fields/BudgetOrder__c.field-meta.xml
<CustomField>
    <fullName>BudgetOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This order is charged against a personal free goods budget. Set by the Order Wizard, never manually.</inlineHelpText>
    <label>Budget Order</label>
    <type>Checkbox</type>
</CustomField>