force-app/main/default/objects/Order/fields/BudgetUser__c.field-meta.xml
<CustomField>
    <fullName>BudgetUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user whose budget is charged — the ordering user or, when ordering as deputy, the represented user.</inlineHelpText>
    <label>Budget User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>