force-app/main/default/objects/Order/fields/CarrierNote__c.field-meta.xml
<CustomField>
    <fullName>CarrierNote__c</fullName>
    <label>Carrier Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>