force-app/main/default/objects/Order/fields/CartFreeItem__c.field-meta.xml
<CustomField>
    <fullName>CartFreeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cart Free Item</label>
    <type>Checkbox</type>
</CustomField>