force-app/main/default/objects/Order/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <description>JJDSF-939 Entered by customer, synchronized to SAP</description>
    <label>Customer Reference</label>
    <length>35</length>
    <type>Text</type>
</CustomField>