force-app/main/default/objects/Order/fields/DeliveryText__c.field-meta.xml
<CustomField>
    <fullName>DeliveryText__c</fullName>
    <label>Delivery Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>