force-app/main/default/objects/Order/fields/ERPErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ERPErrorMessage__c</fullName>
    <label>ERP Error Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>