force-app/main/default/objects/Order/fields/FreeDeliveryReason__c.field-meta.xml
<CustomField>
    <fullName>FreeDeliveryReason__c</fullName>
    <label>Free Delivery Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Sales Rep Visit</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Trade Fair Contact</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>TV Advertising</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Customer Referral</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Newspaper Ad</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Favorable Price</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Fast Delivery</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Good Service</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Expedited Return</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Price Difference: Price was too high</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Poor Quality</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Transport Damage 102</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Quantity Discrepancy</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>Spoiled Goods</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Free Sample</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Price Difference: Price was too low</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>Down Payment Request</label>
            </value>
            <value>
                <fullName>AUS</fullName>
                <label>Defective / Exchange</label>
            </value>
            <value>
                <fullName>EDI</fullName>
                <label>Credit Memo Procedure</label>
            </value>
            <value>
                <fullName>FA</fullName>
                <label>Incorrect Delivery</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>Business Closure</label>
            </value>
            <value>
                <fullName>JDR</fullName>
                <label>DRM Claim - Price Guar., ShpDeb, Refund</label>
            </value>
            <value>
                <fullName>LEI</fullName>
                <label>Rental Fee Charge</label>
            </value>
            <value>
                <fullName>LEV</fullName>
                <label>Rental Contract</label>
            </value>
            <value>
                <fullName>LR</fullName>
                <label>Warehouse Return</label>
            </value>
            <value>
                <fullName>PNS</fullName>
                <label>S2K: PN Status Request</label>
            </value>
            <value>
                <fullName>POS</fullName>
                <label>S2K: PO Status Request</label>
            </value>
            <value>
                <fullName>QBI</fullName>
                <label>SBWAP: Difference Settlement (Qty/Value)</label>
            </value>
            <value>
                <fullName>QOI</fullName>
                <label>SBWAP: New Open Item (Qty/Value)</label>
            </value>
            <value>
                <fullName>R01</fullName>
                <label>RE: Refusal of Acceptance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>