force-app/main/default/objects/Order/fields/FreeItem__c.field-meta.xml
<CustomField>
    <fullName>FreeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Item</label>
    <type>Checkbox</type>
</CustomField>