force-app/main/default/objects/Order/fields/LetterCampaignFreeItem__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignFreeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Campaign Free Item</label>
    <type>Checkbox</type>
</CustomField>