force-app/main/default/objects/Order/fields/OrderApprover__c.field-meta.xml
<CustomField>
    <fullName>OrderApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected user responsible for approval of this order. Default to the related Account Owner only when blank; preserve an explicitly selected approver.</description>
    <inlineHelpText>Select the user who should approve this order. If empty, the Account Owner is used as default.</inlineHelpText>
    <label>Order Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrdersToApprove</relationshipName>
    <type>Lookup</type>
</CustomField>