force-app/main/default/objects/Order/fields/OrderSource__c.field-meta.xml
<CustomField>
    <fullName>OrderSource__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefon</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>Webshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>