force-app/main/default/objects/Order/fields/OverallOrdReltdBillgStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallOrdReltdBillgStatus__c</fullName>
    <inlineHelpText>Status for direct order invoices (e.g., services/credit memos). For standard physical goods, this field is usually left blank, as these are billed on a per-delivery basis.</inlineHelpText>
    <label>Overall Related Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not Invoiced</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially Invoiced</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely Invoiced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>