force-app/main/default/objects/Order/fields/OverallReferenceStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallReferenceStatus__c</fullName>
    <inlineHelpText>Indicates the extent to which this order, as a predecessor document in SAP, has already been transferred to follow-on documents (e.g., deliveries or follow-on documents).</inlineHelpText>
    <label>Overall Reference Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not Referenced</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially Referenced</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely Referenced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>