force-app/main/default/objects/Order/fields/PlantLocation__c.field-meta.xml
<CustomField>
    <fullName>PlantLocation__c</fullName>
    <label>Plant Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1100</fullName>
                <label>1100 - Hamburg</label>
            </value>
            <value>
                <fullName>1200</fullName>
                <label>1200 - Sauerlach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>