force-app/main/default/objects/Order/fields/PreferredShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>PreferredShippingCondition__c</fullName>
    <label>Preferred Shipping Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCondition</valueSetName>
    </valueSet>
</CustomField>