force-app/main/default/objects/Order/fields/ProductCosts__c.field-meta.xml
<CustomField>
    <fullName>ProductCosts__c</fullName>
    <formula>TotalAmount - ShippingCosts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>