force-app/main/default/objects/Order/fields/RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDeliveryDate__c</fullName>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>