force-app/main/default/objects/Order/fields/SAPDocnum__c.field-meta.xml
<CustomField>
    <fullName>SAPDocnum__c</fullName>
    <externalId>true</externalId>
    <label>SAP Docnum</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>