force-app/main/default/objects/Order/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <label>Shipping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>