force-app/main/default/objects/Order/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship To)</relationshipLabel>
    <relationshipName>OrdersShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>