force-app/main/default/objects/Order/fields/TotalBlockStatus__c.field-meta.xml
<CustomField>
    <fullName>TotalBlockStatus__c</fullName>
    <inlineHelpText>Indicates whether and to what extent operational blocks (e.g., shipping or billing blocks) exist in SAP for this order.</inlineHelpText>
    <label>Total Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not Blocked</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially Blocked</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely Blocked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>