force-app/main/default/objects/Order/fields/TotalCreditCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>TotalCreditCheckStatus__c</fullName>
    <label>Total Credit Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Credit check completed, case approved</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Credit check completed, case not approved</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Credit check completed, case not approved, partial approval granted</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Case approved by credit officer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>