force-app/main/default/objects/Order/fields/WebshopOrder__c.field-meta.xml
<CustomField>
    <fullName>WebshopOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1715</description>
    <label>Webshop Order?</label>
    <type>Checkbox</type>
</CustomField>