force-app/main/default/objects/Order/fields/WebshopPhone__c.field-meta.xml
<CustomField>
    <fullName>WebshopPhone__c</fullName>
    <label>Webshop Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>